--- a/sass/components/site/_homepage.scss
+++ b/sass/components/site/_homepage.scss
@@ -52,6 +52,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
+    transition: all .5s;
 }
 
 .slide-content {
@@ -81,6 +82,38 @@
 .slide-button-2 {
 	padding: 1rem 1.5rem;
 	margin: 0 5px;
+}
+
+@include respond-to( medium ) {
+
+	.slide-title,
+	.slide-description,
+	.slide-button-1,
+	.slide-button-2 {
+		transition: all .75s;
+		transition-timing-function: ease-in-out;
+		transition-delay: .5s;
+		position: relative;
+		opacity: 0;
+		transform: scale(5) rotateX(360deg);
+
+		.slick-current &{
+			opacity: 1;
+			transform: scale(1) rotateX(0deg);
+		}
+	}
+
+	.fade-true {
+		.slide-inner {
+			overflow: hidden;
+			transition: all .5s;
+			transform: scale(5);
+		}
+		& .slick-current .slide-inner {
+			transform: scale(1);
+		}
+	}
+
 }
 
 /** Product Categories */
