--- a/sass/components/site/_site.scss
+++ b/sass/components/site/_site.scss
@@ -17,3 +17,8 @@
 ## Homepage
 --------------------------------------------------------------*/
 @import "homepage";
+
+/*--------------------------------------------------------------
+## 404
+--------------------------------------------------------------*/
+@import "404";
