--- a/sass/customizer-control.scss
+++ b/sass/customizer-control.scss
@@ -29,6 +29,7 @@
 	margin-right: 8px;
 }
 
+li#accordion-panel-baltic_homepage_hero_panel,
 li#accordion-panel-baltic_homepage_slider_panel,
 li#accordion-panel-baltic_homepage_product_categories_1_panel,
 li#accordion-panel-baltic_homepage_product_categories_2_panel,
