contact form 7 style

--- a/style.css
+++ b/style.css
@@ -1208,6 +1208,143 @@ ul.products:after,
 
 
 /*--------------------------------------------------------------
+## Contact Form 7
+--------------------------------------------------------------*/
+
+.wpcf7 {
+	margin: 0;
+	padding: 0;
+}
+
+.wpcf7 label {
+	display: block;
+}
+
+.wpcf7-response-output {
+	margin: 2rem 0.5rem 1rem;
+	padding: 0.2rem 1rem;
+}
+
+.wpcf7 .screen-reader-response {
+	overflow: hidden;
+	clip: rect(1px, 1px, 1px, 1px);
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	margin: 0;
+	padding: 0;
+	border: 0;
+}
+
+.wpcf7-mail-sent-ok,
+.wpcf7-mail-sent-ng,
+.wpcf7-spam-blocked,
+.wpcf7-validation-errors {
+	overflow: hidden;
+	position: relative;
+	width: auto;
+	margin: 0 0 1.5em;
+	padding: 0.5rem 1rem;
+	border-radius: 0.25rem;
+	color: #fff;
+	background-color: #e86649;
+	font-size: 14px;
+	font-size: 0.875rem;
+	list-style-type: none;
+}
+
+.wpcf7-mail-sent-ok {
+	background-color: #14b168;
+}
+
+.wpcf7-form-control-wrap {
+	position: relative;
+}
+
+span.wpcf7-not-valid-tip {
+	display: block;
+	color: #f00;
+	font-size: 1em;
+}
+
+.use-floating-validation-tip span.wpcf7-not-valid-tip {
+	position: absolute;
+	z-index: 100;
+	top: 20%;
+	left: 20%;
+	padding: 0.2rem 0.8rem;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	background: #fff;
+}
+
+span.wpcf7-list-item {
+	display: block;
+	margin-bottom: 0.5rem;
+}
+
+.wpcf7-file {
+	width: 100%;
+	padding: 0.5rem;
+	background-color: rgba(0, 0, 0, 0.05);
+}
+
+.wpcf7-list-item-label {
+	margin-left: 0.5rem;
+}
+
+.wpcf7-display-none {
+	display: none;
+}
+
+.wpcf7 .ajax-loader.is-active {
+	display: inline-block;
+	position: relative;
+	top: 8px;
+	width: 24px;
+	height: 24px;
+	margin: 0 10px;
+}
+
+.wpcf7 .ajax-loader.is-active::before {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 24px;
+	height: 24px;
+	border: 2px solid #000;
+	border: 2px solid #000;
+	border-top-color: #ff5722;
+	border-radius: 50%;
+	content: " ";
+	-webkit-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+	-webkit-animation: spin 2s linear infinite;
+	animation: spin 2s linear infinite;
+}
+
+.wpcf7 .ajax-loader.is-active {
+	visibility: visible;
+}
+
+.wpcf7 .ajax-error {
+	display: none;
+}
+
+.wpcf7 .placeheld {
+	color: #909090;
+}
+
+.wpcf7-recaptcha {
+	margin-bottom: 1.5rem;
+}
+
+.wpcf7-recaptcha iframe {
+	margin-bottom: 0;
+}
+
+
+/*--------------------------------------------------------------
 # Vendor
 --------------------------------------------------------------*/
 
@@ -2313,7 +2450,7 @@ ul.products:after,
 	border: none;
 	border-radius: 0;
 	background-color: transparent;
-	box-shadow: 0 0 0 transparent;
+	box-shadow: 0 0 0 rgba(0, 0, 0, 0);
 }
 
 .sub-menu-toggle .icon-stroke {
