--- a/sass/modules/_modules.scss
+++ b/sass/modules/_modules.scss
@@ -12,3 +12,8 @@
 ## Clearings
 --------------------------------------------------------------*/
 @import "clearings";
+
+/*--------------------------------------------------------------
+## Contact Form 7
+--------------------------------------------------------------*/
+@import "cf7";
