--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,14 +1,14 @@
 /*
 Theme Name: Baltic
-Theme URI: https://campaignkit.co/wordpress-themes/baltic
+Theme URI: https://campaignkit.co/feature/web-mobile/website-templates/wordpress-themes/baltic
 Author: Campaign Kit
 Author URI: https://campaignkit.co
-Description: WooCommerce theme
+Description: Baltic is an ultra-powerful theme that combines enterprise-level functionality with impeccable ecommerce design. Featuring live search, advanced filtering, customizable promotion tiles and sales-focused display options, Baltic is purpose-built for large catalog and high-volume stores. Boost conversions and expand your e-commerce business  with a theme that is as stylish as it is scalable.
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: baltic
-Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
+Tags:  one-column, two-columns, custom-background, custom-colors, custom-menu, custom-logo, editor-style, featured-images, full-width-template, footer-widgets, post-formats, sticky-post, theme-options, threaded-comments, translation-ready, blog, e-Commerce
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
