--- a/sass/site/primary/_comments.scss
+++ b/sass/site/primary/_comments.scss
@@ -157,6 +157,61 @@
 	}
 }
 
+.comment-subscription-form,
+.comment-form-cookies-consent {
+	clear: both;
+	position: relative;
+	padding-left: 1.5rem;
+	margin: 1rem 0 0;
+	input[type="checkbox"] {
+	    position: absolute;
+	    padding: 0;
+	    z-index: -1;
+	    opacity: 0;
+	    &:focus~label::before {
+	    	box-shadow: 0 0 0 4px rgba( 0,0,0,.05 );
+	    }
+	    &:checked~label::before {
+	    	background-color: $color__link;
+	    	border-color: $color__link;
+	    }
+	    &:checked~label::after {
+	    	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3E%3C/svg%3E");
+		}
+	}
+	label {
+		display: inline-block;
+		letter-spacing: inherit;
+		margin-bottom: 1.5rem;
+		&:before {
+			background-color: transparent;
+			border: 1px solid $color__border-input;
+			position: absolute;
+			top: .25rem;
+			left: 0;
+			display: block;
+			width: 1rem;
+			height: 1rem;
+			pointer-events: none;
+			content: "";
+			user-select: none;
+			border-radius: 3px;
+		}
+		&:after {
+		    position: absolute;
+		    top: .25rem;
+		    left: 0;
+		    display: block;
+		    width: 1rem;
+		    height: 1rem;
+		    content: "";
+		    background-repeat: no-repeat;
+		    background-position: center center;
+		    background-size: 50% 50%;
+		}
+	}
+}
+
 @include respond-to( medium ){
 	p.comment-form-email {
 		float: left;
