--- a/style.css
+++ b/style.css
@@ -3306,6 +3306,78 @@ a.more-link:focus .icon-stroke {
 	width: 100%;
 }
 
+.comment-subscription-form,
+.comment-form-cookies-consent {
+	clear: both;
+	position: relative;
+	margin: 1rem 0 0;
+	padding-left: 1.5rem;
+}
+
+.comment-subscription-form input[type="checkbox"],
+.comment-form-cookies-consent input[type="checkbox"] {
+	position: absolute;
+	z-index: -1;
+	padding: 0;
+	opacity: 0;
+}
+
+.comment-subscription-form input[type="checkbox"]:focus ~ label::before,
+.comment-form-cookies-consent input[type="checkbox"]:focus ~ label::before {
+	box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.05);
+}
+
+.comment-subscription-form input[type="checkbox"]:checked ~ label::before,
+.comment-form-cookies-consent input[type="checkbox"]:checked ~ label::before {
+	border-color: #ff5722;
+	background-color: #ff5722;
+}
+
+.comment-subscription-form input[type="checkbox"]:checked ~ label::after,
+.comment-form-cookies-consent input[type="checkbox"]:checked ~ label::after {
+	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3E%3C/svg%3E");
+}
+
+.comment-subscription-form label,
+.comment-form-cookies-consent label {
+	display: inline-block;
+	margin-bottom: 1.5rem;
+	letter-spacing: inherit;
+}
+
+.comment-subscription-form label:before,
+.comment-form-cookies-consent label:before {
+	display: block;
+	position: absolute;
+	top: 0.25rem;
+	left: 0;
+	width: 1rem;
+	height: 1rem;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	border-radius: 3px;
+	background-color: transparent;
+	content: "";
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	pointer-events: none;
+}
+
+.comment-subscription-form label:after,
+.comment-form-cookies-consent label:after {
+	display: block;
+	position: absolute;
+	top: 0.25rem;
+	left: 0;
+	width: 1rem;
+	height: 1rem;
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: 50% 50%;
+	content: "";
+}
+
 
 /*--------------------------------------------------------------
 # Widgets
