--- a/style-rtl.css
+++ b/style-rtl.css
@@ -538,6 +538,8 @@ html {
 }
 
 body {
+	overflow-x: hidden;
+	max-width: 100vw;
 	background: #eceff1; /* Fallback for when there is no custom background color defined. */
 	font-weight: 400;
 }
@@ -1429,6 +1431,7 @@ span.wpcf7-list-item {
 	display: inline-block;
 	width: 6px;
 	height: 100%;
+	margin: 1px;
 	background-color: #333;
 	-webkit-animation: sk-waveStretchDelay 1.2s infinite ease-in-out;
 	animation: sk-waveStretchDelay 1.2s infinite ease-in-out;
