--- a/sass/shop/_checkout.scss
+++ b/sass/shop/_checkout.scss
@@ -45,6 +45,7 @@
 	margin-top: $gutter__width;
 	@include respond-to( medium ){
 		margin-top: $gutter__width*2;
+		margin-bottom: $gutter__width*2;
 	}
 }
 
@@ -57,37 +58,32 @@
 		width: 100%;
 		margin-bottom: .5rem;
 		input[type="text"],
-		input[type="submit"] {
-			float: left;
-			width: 50%;
-		}
-		input[type="text"] {
-			border-right-width: 0;
-			border-top-right-radius: 0;
-			border-bottom-right-radius: 0;
-		}
-		input[type="submit"] {
-			border-left-width: 0;
-			padding-left: 0;
-			padding-right: 0;
-			border-top-left-radius: 0;
-			border-bottom-left-radius: 0;
+		.button {
+			width: 100%;
+			margin-top: .5rem;
+			@include respond-to( medium ) {
+				margin-top: 0;
+				float: left;
+				width: 50%;
+			}
 		}
 
-		@include respond-to( medium ){
+		@include respond-to( medium ) {
 			float: left;
-			width: 40%;
-			padding-right: 10px;
+			width: 50%;
 			margin-bottom: 0;
 		}
 	}
-	input[type="submit"] {
+
+	.button {
 		width: 100%;
 		&[disabled] {
+			background-color: $color__button;
+			border-color: $color__button;
 			cursor: not-allowed;
-			opacity: .75;
+			opacity: .5;
 		}
-		@include respond-to( medium ){
+		@include respond-to( medium ) {
 			float: right;
 			width: auto;
 		}
@@ -95,9 +91,11 @@
 }
 
 #ship-to-different-address {
+	margin-bottom: 1.5rem;
 	label {
 		font-weight: 300;
 		cursor: pointer;
+		line-height: 2;
 
 		span {
 			position: relative;
@@ -382,4 +380,18 @@ a.wcppec-checkout-buttons__button {
 	.form-row-last {
 		padding-left: $gutter__width;
 	}
+}
+
+.woocommerce-privacy-policy-text {
+    background-color: $color__alpha-dark05;
+    color: $color__text-secondary;
+    padding: 1rem;
+	@include font-size(0.875);
+    margin-bottom: 1rem;
+    overflow: hidden;
+    box-shadow: inset 0 0 0 1px rgba(0,0,0,.1);
+    border-radius: .25rem;
+    p:last-child {
+    	margin-bottom: 0;
+    }
 }
