add default homepage template

--- a/sass/editor-style.scss
+++ b/sass/editor-style.scss
@@ -99,6 +99,8 @@ figure {
 @import "elements/lists";
 @import "elements/tables";
 
+@import "forms/forms";
+
 @import "typography/headings";
 
 @import "typography/copy";
