--- a/assets/css/editor-style-rtl.css
+++ b/assets/css/editor-style-rtl.css
@@ -199,6 +199,377 @@ tfoot tr:nth-of-type(even) {
 	margin: 0;
 }
 
+.button,
+button,
+input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+	display: inline-block;
+	position: relative;
+	padding: 0.75rem 1rem;
+	border: 1px solid #ff5722;
+	border-radius: 0.25rem;
+	color: #fff;
+	background-color: #ff5722;
+	font-size: 16px;
+	font-size: 1rem;
+	font-weight: 400;
+	line-height: 1;
+	text-align: center;
+	vertical-align: middle;
+	vertical-align: top;
+	cursor: pointer;
+	user-select: none;
+	transition-timing-function: ease-in-out;
+	transition-duration: 0.25s;
+	transition-property: background, color, opacity, transform, box-shadow;
+}
+
+.button:hover,
+.button:active,
+.button:focus,
+button:hover,
+button:active,
+button:focus,
+input[type="button"]:hover,
+input[type="button"]:active,
+input[type="button"]:focus,
+input[type="reset"]:hover,
+input[type="reset"]:active,
+input[type="reset"]:focus,
+input[type="submit"]:hover,
+input[type="submit"]:active,
+input[type="submit"]:focus {
+	border-color: #ff916f;
+	color: #fff;
+	background-color: #ff916f;
+}
+
+.button:focus,
+button:focus,
+input[type="button"]:focus,
+input[type="reset"]:focus,
+input[type="submit"]:focus {
+	z-index: 1;
+	outline: none;
+	box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.05);
+}
+
+.btn-cta {
+	display: block;
+	margin-bottom: 10px;
+	padding: 0.75rem 0.5rem;
+	border: 2px solid transparent;
+	border-radius: 0.25rem;
+	box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+	font-size: 18px;
+	font-size: 1.125rem;
+	font-weight: 400;
+	line-height: 1.5;
+	text-align: center;
+	vertical-align: middle;
+	white-space: nowrap;
+	user-select: none;
+	transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.btn-cta__white {
+	border-color: #fff;
+	color: #505050;
+	background-color: #fff;
+}
+
+.btn-cta__white:hover,
+.btn-cta__white:focus {
+	border-color: #505050;
+	color: #fff;
+	background-color: #505050;
+}
+
+.btn-cta__primary {
+	border-color: #1976d2;
+	color: #fff !important;
+	background-color: #1976d2;
+}
+
+.btn-cta__primary:hover,
+.btn-cta__primary:focus {
+	border-color: #4e9cea;
+	color: #fff;
+	background-color: #4e9cea;
+}
+
+.btn-cta__secondary {
+	border-color: #607d8b;
+	color: #fff !important;
+	background-color: #607d8b;
+}
+
+.btn-cta__secondary:hover,
+.btn-cta__secondary:focus {
+	border-color: #8aa2ae;
+	color: #fff;
+	background-color: #8aa2ae;
+}
+
+.btn-cta__success {
+	border-color: #4caf50;
+	color: #fff !important;
+	background-color: #4caf50;
+}
+
+.btn-cta__success:hover,
+.btn-cta__success:focus {
+	border-color: #80c883;
+	color: #fff;
+	background-color: #80c883;
+}
+
+.btn-cta__danger {
+	border-color: #ff5722;
+	color: #fff !important;
+	background-color: #ff5722;
+}
+
+.btn-cta__danger:hover,
+.btn-cta__danger:focus {
+	border-color: #ff916f;
+	color: #fff;
+	background-color: #ff916f;
+}
+
+.btn-cta__warning {
+	border-color: #ff9800;
+	color: #fff !important;
+	background-color: #ff9800;
+}
+
+.btn-cta__warning:hover,
+.btn-cta__warning:focus {
+	border-color: #ffb74d;
+	color: #fff;
+	background-color: #ffb74d;
+}
+
+.btn-cta__info {
+	border-color: #00bcd4;
+	color: #fff !important;
+	background-color: #00bcd4;
+}
+
+.btn-cta__info:hover,
+.btn-cta__info:focus {
+	border-color: #22e6ff;
+	color: #fff;
+	background-color: #22e6ff;
+}
+
+.btn-cta__outline-white {
+	border-color: #fff;
+	color: #fff !important;
+	background-color: transparent;
+}
+
+.btn-cta__outline-white:hover,
+.btn-cta__outline-white:focus {
+	border-color: #fff;
+	color: #505050;
+	background-color: #fff;
+}
+
+.btn-cta__outline-primary {
+	border-color: #1976d2;
+	color: #1976d2;
+	background-color: transparent;
+}
+
+.btn-cta__outline-primary:hover,
+.btn-cta__outline-primary:focus {
+	border-color: #4e9cea;
+	color: #fff;
+	background-color: #4e9cea;
+}
+
+.btn-cta__outline-secondary {
+	border-color: #607d8b;
+	color: #607d8b;
+	background-color: transparent;
+}
+
+.btn-cta__outline-secondary:hover,
+.btn-cta__outline-secondary:focus {
+	border-color: #8aa2ae;
+	color: #fff;
+	background-color: #8aa2ae;
+}
+
+.btn-cta__outline-success {
+	border-color: #4caf50;
+	color: #4caf50;
+	background-color: transparent;
+}
+
+.btn-cta__outline-success:hover,
+.btn-cta__outline-success:focus {
+	border-color: #80c883;
+	color: #fff;
+	background-color: #80c883;
+}
+
+.btn-cta__outline-danger {
+	border-color: #ff5722;
+	color: #ff5722;
+	background-color: transparent;
+}
+
+.btn-cta__outline-danger:hover,
+.btn-cta__outline-danger:focus {
+	border-color: #ff916f;
+	color: #fff;
+	background-color: #ff916f;
+}
+
+.btn-cta__outline-warning {
+	border-color: #ff9800;
+	color: #ff9800;
+	background-color: transparent;
+}
+
+.btn-cta__outline-warning:hover,
+.btn-cta__outline-warning:focus {
+	border-color: #ffb74d;
+	color: #fff;
+	background-color: #ffb74d;
+}
+
+.btn-cta__outline-info {
+	border-color: #00bcd4;
+	color: #00bcd4;
+	background-color: transparent;
+}
+
+.btn-cta__outline-info:hover,
+.btn-cta__outline-info:focus {
+	border-color: #22e6ff;
+	color: #fff;
+	background-color: #22e6ff;
+}
+
+.btn-cta__rounded {
+	border-radius: 5rem;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="url"],
+input[type="password"],
+input[type="search"],
+input[type="number"],
+input[type="tel"],
+input[type="range"],
+input[type="date"],
+input[type="month"],
+input[type="week"],
+input[type="time"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="color"],
+textarea {
+	position: relative;
+	width: 100%;
+	padding: 0.5rem;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	border-radius: 0.25rem;
+	color: #909090;
+	background-color: rgba(255, 255, 255, 0.5);
+	transition-timing-function: ease-in-out;
+	transition-duration: 0.25s;
+	transition-property: background, color, opacity, transform, box-shadow;
+}
+
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="url"]:focus,
+input[type="password"]:focus,
+input[type="search"]:focus,
+input[type="number"]:focus,
+input[type="tel"]:focus,
+input[type="range"]:focus,
+input[type="date"]:focus,
+input[type="month"]:focus,
+input[type="week"]:focus,
+input[type="time"]:focus,
+input[type="datetime"]:focus,
+input[type="datetime-local"]:focus,
+input[type="color"]:focus,
+textarea:focus {
+	z-index: 1;
+	outline: none;
+	color: #606060;
+	background-color: white;
+	box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.05);
+}
+
+select {
+	width: 100%;
+	padding: 0.5rem;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	border-radius: 0.25rem;
+	color: #909090;
+	background-color: rgba(255, 255, 255, 0.5);
+	background-image: linear-gradient(-45deg, transparent 50%, gray 50%), linear-gradient(-135deg, gray 50%, transparent 50%);
+	background-repeat: no-repeat;
+	background-position: calc(100% - (100% - 15px)) calc(1em + 3px), calc(100% - (100% - 10px)) calc(1em + 3px);
+	background-size: 5px 5px, 5px 5px;
+	text-indent: 1px;
+	text-overflow: "";
+
+	-webkit-appearance: none;
+	-moz-appearance: none;
+}
+
+select:focus {
+	z-index: 1;
+	outline: none;
+	color: #606060;
+	background-color: white;
+	box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.05);
+}
+
+select::-ms-expand {
+	display: none;
+}
+
+textarea {
+	width: 100%;
+}
+
+label {
+	display: block;
+	margin-bottom: 0.25rem;
+	color: #909090;
+	font-size: 14px;
+	font-size: 0.875rem;
+}
+
+::-webkit-input-placeholder {
+	color: #909090;
+}
+
+:-moz-placeholder {
+	/* Firefox 18- */
+	color: #909090;
+}
+
+::-moz-placeholder {
+	/* Firefox 19+ */
+	color: #909090;
+}
+
+:-ms-input-placeholder {
+	color: #909090;
+}
+
 h1,
 h2,
 h3,
@@ -467,6 +838,13 @@ svg symbol {
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
 	img[src$=".svg"] {
 		width: 100%;
+	}
+}
+
+@media (min-width: 768px) {
+	.btn-cta {
+		display: inline-block;
+		padding: 0.75rem 2rem;
 	}
 }
 
