--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -7,3 +7,8 @@
 ## Comments
 --------------------------------------------------------------*/
 @import "primary/comments";
+
+/*--------------------------------------------------------------
+## Homepage
+--------------------------------------------------------------*/
+@import "homepage/homepage";
