--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,6 @@
 /*
 Theme Name: Baltic
-Theme URI: https://campaignkit.co/feature/web-mobile/website-templates/wordpress-themes/baltic
+Theme URI: https://elevate360.github.io/baltic/
 Author: Campaign Kit
 Author URI: https://campaignkit.co
 Description: Baltic is an ultra-powerful theme that combines enterprise-level functionality with impeccable ecommerce design. Featuring live search, advanced filtering, customizable promotion tiles and sales-focused display options, Baltic is purpose-built for large catalog and high-volume stores. Boost conversions and expand your e-commerce business  with a theme that is as stylish as it is scalable.
