--- a/sass/modules/_modules.scss
+++ b/sass/modules/_modules.scss
@@ -24,9 +24,20 @@
 @import "clearings";
 
 /*--------------------------------------------------------------
+## Jetpack
+--------------------------------------------------------------*/
+@import "jetpack";
+
+/*--------------------------------------------------------------
 ## Contact form 7
 --------------------------------------------------------------*/
 @import "cf7";
+
+/*--------------------------------------------------------------
+## Algolia
+--------------------------------------------------------------*/
+@import "algolia/autocomplete";
+@import "algolia/instantsearch";
 
 .hide {
 	display: none;
