--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -278,6 +278,7 @@ a.custom-logo-link {
 
 .site-header-extra-toggle {
 	background-color: var(--color__container);
+	color: var(--color__text-primary);
 	position: absolute;
 	top: 90px;
 	right: 1rem;
